# grap_ws

./: README  README.md  gui.py  output.urdf
docker/: Dockerfile  entrypoint.sh
install/: local_setup.sh  setup.sh
install/grap_bringup/share/grap_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/grap_bringup/share/grap_bringup/launch/: simulated_robot.launch.py
install/grap_controller/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: grap_controller
install/grap_controller/share/grap_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/grap_description/share/ament_index/resource_index/parent_prefix_path/: grap_description
install/grap_description/share/grap_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/grap_description/share/grap_description/cmake/: grap_descriptionConfig.cmake
install/grap_description/share/grap_description/urdf/: grap.urdf.xacro
install/grap_moveit/share/grap_moveit/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/grap_moveit/share/grap_moveit/config/: grap.srdf  moveit.rviz
log/: latest_build
src/aruco_ros/: README.md
src/aruco_ros/aruco_ros/: CMakeLists.txt
src/aruco_ros/aruco_ros/launch/: single.launch.py
src/aruco_ros/aruco_ros/src/: simple_single.cpp
src/grap_bringup/: CMakeLists.txt  package.xml
src/grap_bringup/launch/: aruco_robot.launch.py  real_robot.launch.py  robot_real_cam.launch.py  simulated_robot.launch.py
src/grap_controller/: CMakeLists.txt  grap_controller.xml  package.xml
src/grap_controller/config/: grap_controllers.yaml
src/grap_controller/include/: grap_interface.hpp
src/grap_controller/launch/: controller.launch.py
src/grap_controller/src/: grap_interface.cpp
src/grap_description/: CMakeLists.txt
src/grap_description/config/: joint_names_grap_description.yaml
src/grap_description/launch/: display.launch.py  gazebo.launch.py
src/grap_description/meshes/: base_link.STL  gripper.STL  jaw_1.STL  jaw_2.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
src/grap_description/rviz/: display.rviz
src/grap_description/urdf/: camera.xacro  grap.urdf.xacro  grap_control.xacro  grap_description.csv  grap_gazebo.xacro  real_camera.urdf.xacro
src/grap_moveit/: CMakeLists.txt  package.xml
src/grap_moveit/config/: grap.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
src/grap_moveit/launch/: moveit.launch.py
src/move_program/: CMakeLists.txt  package.xml
src/move_program/config/: joystick.yaml
src/move_program/launch/: aruco_follow.launch.py  gamepad.launch.py  joystick.launch.py  move_program.launch.py  predefined.launch.py
src/move_program/src/: aruco_follower.cpp  cartesian_path.cpp  move_program.cpp  xyz_trajectory.cpp
src/realsense-ros/realsense2_description/urdf/: _d435.urdf.xacro
src/yolo_ros/yolo_bringup/launch/: yolo_distance.launch.py
src/yolo_ros/yolo_msgs/: CMakeLists.txt
src/yolo_ros/yolo_msgs/msg/: DetectionDistance.msg
src/yolo_ros/yolo_ros/: setup.py
src/yolo_ros/yolo_ros/yolo_ros/: detection_distance_node.py
